# songtools

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/songtools/: __init__.py  backlog.py  config.py  conftest.py  naming.py  song_collection.py  song_file_types.py  utils.py
src/songtools/db/: models.py  session.py
src/songtools/tests/: test_backlog.py  test_naming.py  test_song_collection.py  test_song_file_types.py
src/songtools/tests/fixtures/: silence20s.aif  silence20s.flac
